test/corpus/lists.txt
==================
List
==================

= a
= b

---

(source_file
  (list
    (value)
    (value)))

==================
Nested Lists
==================

=
    = b

---

(source_file
  (list
    (list
      (value))))

==================
Maps in Lists
==================

=
  a = b
=
  b = c

---

(source_file
  (list
    (map
      (key)
      (value))
    (map
      (key)
      (value))))

==================
Lists in Maps
==================

a =
  = b
b =
  = c

---

(source_file
  (map
    (key)
    (list
      (value))
    (key)
    (list
      (value))))

==================
Lists with comments
==================

=;
  ;
= b ;asd

---

(source_file
  (list
    (comment)
    (line_comment)
    (value)
    (comment)))

==================
Lists with multiline
==================

=""" ;a
  @
= """ruby
  def a
    puts :stup
  end

---

(source_file
  (list
    (multiline_value
      (comment)
      (multiline_content))
    (multiline_value
      (multiline_hint)
      (multiline_content))))
