test/corpus/values.txt
==================
Quoted
==================

"\t=\n= "= "a\\ ="
"\{123}" = ""

---

(source_file
  (map
    (key
      (escape_sequence)
      (escape_sequence))
    (value
      (escape_sequence))
    (key
      (escape_sequence))
    (value)))

==================
Comments
==================

a = a;
b = a ;

---

(source_file
  (map
    (key)
    (value)
    (comment)
    (key)
    (value)
    (comment)))

==================
Comments & Quotes
==================

"a"="a";
"b";
  value = """;wow
    wow
  value = """2;wow
    .
  value = """ bash ;wow
    .

---

(source_file
  (map
    (key)
    (value)
    (comment)
    (key)
    (comment)
    (map
      (key)
      (multiline_value
        (comment)
        (multiline_content))
      (key)
      (multiline_value
        (multiline_hint)
        (comment)
        (multiline_content))
      (key)
      (multiline_value
        (multiline_hint)
        (comment)
        (multiline_content)))))

==================
Multiline
==================

a = """
  b c d

---

(source_file
  (map
    (key)
    (multiline_value
      (multiline_content))))

==================
Multiline nesting
==================

a = """
  b c d
    g
   h
  i
b = c

---

(source_file
  (map
    (key)
    (multiline_value
      (multiline_content))
    (key)
    (value)))

==================
Multiline indicators
==================

a = """bash ;wow
  #!/bin/bash

  echo "hello world"

---

(source_file
  (map
    (key)
    (multiline_value
      (multiline_hint)
      (comment)
      (multiline_content))))

==================
Multiline Indicators More
==================

a = """ ba_sh
  #!/bin/bash
  ;
  echo "hello world"; exit 1

---

(source_file
  (map
    (key)
    (multiline_value
      (multiline_hint)
      (multiline_content))))

==================
Multiline Comments
==================

a = """
  ;
; hello

---

(source_file
  (map
    (key)
    (multiline_value
      (multiline_content))
    (line_comment)))
